fix "jumping" of input fields in orders

--- a/frontend/app/components/order-grid/order-grid.component.css
+++ b/frontend/app/components/order-grid/order-grid.component.css
@@ -163,7 +163,7 @@
 }
 
 .order .support .maker {
-    margin-bottom:20px;
+    margin-bottom:7px;
 }
 
 .participatingBadge {
